# brique

./: '  .gitignore  Cargo.toml  README.md
.github/: fcbot.yaml  prusa.ini
.github/workflows/: connection_plate.yaml  kicad.yaml  rust.yaml
app/src/: lib.rs
clock/: Cargo.toml
clock/src/: lib.rs
connection_plate/: fcbot.yaml  hollow.FCStd
hardware_test/: Cargo.toml
hardware_test/src/: backlight.rs  buzzer.rs  cdc.rs  hid.rs  keypad.rs  lib.rs  vibration.rs
keyboard/: Cargo.toml
keyboard/src/: lib.rs
kicad/: .gitignore  brique.kicad_pcb  brique.kicad_prl  brique.kicad_pro  brique.kicad_sch  fp-info-cache  keypad.kicad_sch  kicad_ci_test.kibot.yaml  power.kicad_sch  wireless.kicad_sch
main_menu/: Cargo.toml
main_menu/src/: lib.rs
pcb/: keypad.kicad_sch  nokia.kicad_pcb  nokia.kicad_prl  nokia.kicad_pro  nokia.kicad_sch  power.kicad_sch  wireless.kicad_sch
pcb/plots/: bom.csv  nokia-B_Cu.gbl  nokia-B_Mask.gbs  nokia-B_Paste.gbp  nokia-B_Silkscreen.gbo  nokia-Edge_Cuts.gm1  nokia-F_Cu.gtl  nokia-F_Mask.gts  nokia-F_Paste.gtp  nokia-F_Silkscreen.gto  nokia-In1_Cu.g2  nokia-In2_Cu.g3  nokia-NPTH-drl_map.gbr  nokia-NPTH.drl  nokia-PTH-drl_map.gbr  nokia-PTH.drl  nokia-bottom-pos.csv  nokia-top-pos.csv
reset_to_boot/: Cargo.toml
reset_to_boot/src/: lib.rs
ringtones/: Cargo.toml
ringtones/src/: lib.rs
rp/: Cargo.toml  memory.x
rp/src/: background_core.rs  button.rs  device.rs  flash.rs  main.rs  rtc.rs  usb.rs
rp/src/background_core/: flash.rs  usb.rs
rp/src/device/: backlight.rs  buzzer.rs  display.rs  keypad.rs  vibration_motor.rs
rtttl/: ]
rtttl/src/: lib.rs  note.rs
shared/: Cargo.toml
shared/src/: abstract_menu.rs  character_select.rs  confirmation.rs  console.rs  grid.rs  grid_menu.rs  held_key.rs  lib.rs  lock_screen.rs  menu.rs  multitap.rs  new_menu.rs  test.rs  textbox.rs  time.rs
shared/src/multitap/: case.rs  pending.rs
shared/src/new_menu/: row_text.rs
snake/: Cargo.toml
snake/src/: cell.rs  lib.rs
talk/: Cargo.toml
test/: Cargo.toml
test/src/: held_key.rs  keypad.rs  lib.rs
web/: Cargo.toml  index.html
web/src/: device.rs  lib.rs  power.rs  system_request_handler.rs
web/src/device/: backlight.rs  buzzer.rs  display.rs  keypad.rs  rtc.rs  vibration_motor.rs
