[package]
name = "main-menu"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-time = { workspace = true }
embedded-graphics = "0.8"
shared = { path = "../shared" }
ringtones = { path = "../ringtones" }
keyboard = { path = "../keyboard" }
reset-to-boot = { path = "../reset_to_boot" }
clock = { path = "../clock" }
hardware-test = { path = "../hardware_test" }
snake = { path = "../snake" }
