[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", default-features = false }
defmt.workspace = true
embassy-futures.workspace = true
embassy-time = { workspace = true }
embedded-graphics = "0.8"
embedded-graphics-core = "0.4.0"
embedded-text = "0.7.2"
enum-iterator = { version = "2.1.0", default-features = false }
enum-iterator-derive = { version = "1.4.0", default-features = false }
futures = { version = "0.3.31", default-features = false }
heapless = "0.8.0"
log = "0.4"
strum = { version = "0.27.1", features = ["derive"], default-features = false }
strum_macros = "0.27.1"
usbd-hid.workspace = true
fastrand = { version = "2.1.1", default-features = false }
